iptables
# Generated by iptables-save v1.4.7 on Mon Jun 16 10:51:55 2014
*filter
:INPUT ACCEPT [97:17387]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [2704:308348]
-A INPUT -i tun+ -j ACCEPT 
-A INPUT -i eth1 -m state --state NEW -j ACCEPT 
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -i eth1 -j ACCEPT 
-A INPUT -i eth1 -p tcp -m tcp --dport 4444 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 4444 -j ACCEPT 
-A INPUT -s 192.168.0.86/32 -j ACCEPT 
-A INPUT -i eth1 -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -i eth1 -p tcp -m tcp --dport 4444 -j ACCEPT 
-A FORWARD -o tun+ -j ACCEPT 
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A FORWARD -s 172.16.31.0/24 -j ACCEPT 
-A FORWARD -i eth1 -j ACCEPT 
-A FORWARD -p tcp -m tcp --dport 3389 -j ACCEPT 
-A FORWARD -p tcp -m tcp --dport 4444 -j ACCEPT 
-A FORWARD -p tcp -m tcp --dport 4444 -j ACCEPT 
-A FORWARD -p tcp -m tcp --dport 3389 -j ACCEPT 
-A FORWARD -p tcp -m tcp --dport 4444 -j ACCEPT 
-A FORWARD -p tcp -m tcp --dport 4444 -j ACCEPT 
-A FORWARD -p tcp -m tcp --dport 4444 -j ACCEPT 
-A OUTPUT -o tun+ -j ACCEPT 
-A OUTPUT -p tcp -m tcp --dport 4444 -j ACCEPT 
COMMIT
# Completed on Mon Jun 16 10:51:55 2014
# Generated by iptables-save v1.4.7 on Mon Jun 16 10:51:55 2014
*mangle
:PREROUTING ACCEPT [33846:29887619]
:INPUT ACCEPT [2685:210615]
:FORWARD ACCEPT [31018:29660654]
:OUTPUT ACCEPT [2704:308348]
:POSTROUTING ACCEPT [33722:29969002]
-A PREROUTING -p esp -j MARK --set-xmark 0x1/0xffffffff 
COMMIT
# Completed on Mon Jun 16 10:51:55 2014
# Generated by iptables-save v1.4.7 on Mon Jun 16 10:51:55 2014
*nat
:PREROUTING ACCEPT [2352:151197]
:POSTROUTING ACCEPT [22:1588]
:OUTPUT ACCEPT [308:23149]
-A PREROUTING -m mark --mark 0x1 -j ACCEPT 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 2202 -j DNAT --to-destination 192.168.0.2:22 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 2203 -j DNAT --to-destination 192.168.0.3:22 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 2204 -j DNAT --to-destination 192.168.0.4:22 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 2205 -j DNAT --to-destination 192.168.0.5:22 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 2206 -j DNAT --to-destination 192.168.0.6:22 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 2207 -j DNAT --to-destination 192.168.0.7:22 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 2208 -j DNAT --to-destination 192.168.0.8:22 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 2209 -j DNAT --to-destination 192.168.0.9:22 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 80 -j DNAT --to-destination 192.168.0.6:80 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 1494 -j DNAT --to-destination 192.168.0.6:1494 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 514 -j DNAT --to-destination 192.168.0.2:514 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 5005 -j DNAT --to-destination 192.168.0.5:5005 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 5006 -j DNAT --to-destination 192.168.0.5:5006 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 5007 -j DNAT --to-destination 192.168.0.5:5007 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 5008 -j DNAT --to-destination 192.168.0.5:5008 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 5009 -j DNAT --to-destination 192.168.0.5:5009 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 5010 -j DNAT --to-destination 192.168.0.5:5010 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 50000 -j DNAT --to-destination 192.168.0.5:50000 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 50005 -j DNAT --to-destination 192.168.0.5:50005 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 50009 -j DNAT --to-destination 192.168.0.5:50009 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 50010 -j DNAT --to-destination 192.168.0.5:50010 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 50011 -j DNAT --to-destination 192.168.0.5:50011 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 50012 -j DNAT --to-destination 192.168.0.5:50012 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 50013 -j DNAT --to-destination 192.168.0.5:50013 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 50014 -j DNAT --to-destination 192.168.0.5:50014 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 50184 -j DNAT --to-destination 192.168.0.5:50184 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 50185 -j DNAT --to-destination 192.168.0.5:50185 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 50186 -j DNAT --to-destination 192.168.0.5:50186 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 50187 -j DNAT --to-destination 192.168.0.5:50187 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 50188 -j DNAT --to-destination 192.168.0.5:50188 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 50189 -j DNAT --to-destination 192.168.0.5:50189 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 50000 -j DNAT --to-destination 192.168.0.5:50000 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 50005 -j DNAT --to-destination 192.168.0.5:50005 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 50009 -j DNAT --to-destination 192.168.0.5:50009 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 50010:50014 -j DNAT --to-destination 192.168.0.5:50010-50014 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 50184:50189 -j DNAT --to-destination 192.168.0.5:50184-50189 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 2302 -j DNAT --to-destination 192.168.0.2:23 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 2303 -j DNAT --to-destination 192.168.0.3:23 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 2304 -j DNAT --to-destination 192.168.0.4:23 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 2305 -j DNAT --to-destination 192.168.0.5:23 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 2306 -j DNAT --to-destination 192.168.0.6:23 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 5505:5510 -j DNAT --to-destination 192.168.0.5:5505-5510 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 2242 -j DNAT --to-destination 192.168.0.42:22 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 2243 -j DNAT --to-destination 192.168.0.43:22 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 2244 -j DNAT --to-destination 192.168.0.44:22 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 2245 -j DNAT --to-destination 192.168.0.45:22 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 2246 -j DNAT --to-destination 192.168.0.46:22 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 2247 -j DNAT --to-destination 192.168.0.47:22 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 2250 -j DNAT --to-destination 192.168.0.50:22 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 2251 -j DNAT --to-destination 192.168.0.51:22 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 2282 -j DNAT --to-destination 192.168.0.82:22 
-A PREROUTING -p tcp -m tcp --dport 3389 -j DNAT --to-destination 192.168.0.84 
-A PREROUTING -p tcp -m tcp --dport 3389 -j DNAT --to-destination 192.168.0.84 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 3390 -j DNAT --to-destination 192.168.0.59:3389 
-A PREROUTING -p tcp -m tcp --dport 4444 -j DNAT --to-destination 192.168.0.115 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 50500 -j DNAT --to-destination 192.168.0.12:50500 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 50503 -j DNAT --to-destination 192.168.0.12:50503 
-A PREROUTING -p tcp -m tcp --dport 57004 -j DNAT --to-destination 192.168.0.42:57004 
-A POSTROUTING -o eth0 -j MASQUERADE 
COMMIT
# Completed on Mon Jun 16 10:51:55 2014
